force-app/main/default/objects/Distributor_Stock__c/Distributor_Stock__c.object-meta.xml
<CustomObject>
    <label>Distributor Stock</label>
    <nameField>
        <displayFormat>DS - {0000}</displayFormat>
        <label>Distributor Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>