force-app/main/default/objects/Distributor_Stock__c/fields/Available_Nonsaleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Nonsaleable_Quantity__c</fullName>
    <formula>GRN_Nonsaleable_Quantity__c + Secondary_Return_Nonsaleable_Quantity__c - Primary_Return_Quantity__c -  Written_Off_Quantity__c -  Non_Saleable_to_Saleable_Quantity__c +  Saleable_to_Non_Saleable_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Nonsaleable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>