force-app/main/default/objects/Distributor_Stock__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <formula>GRN_Quantity__c+ Secondary_Return_Quantity__c- Secondary_Invoice_Quantity__c- Primary_Return_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>