force-app/main/default/objects/Distributor_Stock__c/fields/Available_Saleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Saleable_Quantity__c</fullName>
    <formula>GRN_Saleable_Quantity__c + Secondary_Return_Saleable_Quantity__c - Secondary_Invoice_Quantity__c +  -Saleable_to_Non_Saleable_Quantity__c + Non_Saleable_to_Saleable_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Saleable Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>