force-app/main/default/objects/Distributor_Stock__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributor Stocks</relationshipLabel>
    <relationshipName>Distributor_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>