force-app/main/default/objects/Distributor_Stock__c/fields/DistributorWithProduct__c.field-meta.xml
<CustomField>
    <fullName>DistributorWithProduct__c</fullName>
    <formula>CASESAFEID(Distributor__c)+&apos;_&apos;+Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DistributorWithProduct</label>
    <type>Text</type>
</CustomField>