force-app/main/default/objects/Distributor_Stock__c/fields/GRN_Nonsaleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GRN_Nonsaleable_Quantity__c</fullName>
    <label>GRN Nonsaleable Quantity</label>
    <summarizedField>Goods_Received_Note_Item__c.Received_Nonsaleable_Quantity__c</summarizedField>
    <summaryForeignKey>Goods_Received_Note_Item__c.Distributor_Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>