force-app/main/default/objects/Distributor_Stock__c/fields/Primary_Return_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Return_Quantity__c</fullName>
    <label>Primary Return Quantity</label>
    <summarizedField>Return_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Return_Item__c.Customer_Type__c</field>
        <operation>equals</operation>
        <value>Primary Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Return_Item__c.Distributor_Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>