force-app/main/default/objects/Distributor_Stock__c/fields/Secondary_Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_Quantity__c</fullName>
    <label>Secondary Invoice Quantity</label>
    <summarizedField>Secondary_Invoice_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Secondary_Invoice_Item__c.Distributor_Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>