force-app/main/default/objects/Distributor_Stock__c/fields/Secondary_Return_Nonsaleable_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Return_Nonsaleable_Quantity__c</fullName>
    <label>Secondary Return Nonsaleable Quantity</label>
    <summarizedField>Return_Item__c.Nonsaleable_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Return_Item__c.Customer_Type__c</field>
        <operation>equals</operation>
        <value>Secondary Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>Return_Item__c.Distributor_Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>