force-app/main/default/objects/Distributor_Stock__c/fields/Written_Off_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Written_Off_Quantity__c</fullName>
    <label>Written Off Quantity</label>
    <summarizedField>Stock_Adjustment__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Stock_Adjustment__c.Adjustment_Type__c</field>
        <operation>equals</operation>
        <value>Written Off Quantity</value>
    </summaryFilterItems>
    <summaryForeignKey>Stock_Adjustment__c.Distributor_Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>